align-self: flex-start added to avoid stretch image

--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ h1 {
 .row {
     /* display: flex => flex container */
     display: flex;
+    
     /* can't use yet */
     /* gap: 100px; */
 }
@@ -81,6 +82,7 @@ h1 {
 
 .hero__image{
     align-self: flex-start;
+    border: 1px solid white;
 }
 .hero__text {
     width: 60%;
